--- a/src/index.html
+++ b/src/index.html
@@ -83,31 +83,34 @@
 
 
 
-  <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
-  </div>
-
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
-  </div>
+  <div class="marketing">
+   <div class="footer">
+      <div class="container">
+          <h3>Seja bem vindo</h3>
+            <p>Visitantes</p>
+   </div>    
 
 
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
+  <div class="row">
+    <div class="col-md-4">
+    <span class="glyphicon glyphicon-envelope"></span>
+    <h2>Bootstrap</h2>
+    <p>Gostei</p>
+    </div>
+
+    <div class="col-md-4">
+    <span class="glyphicon glyphicon-envelope"></span>
+    <h2>Bootstrap</h2>
+   <p>Gostei</p>
+  </div>
+    <div class="col-md-4">
+    <span class="glyphicon glyphicon-envelope"></span>
+    <h2>Bootstrap</h2>
+  <p>Gostei</p>
   </div>
 
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
+  <div class="container"></div>
+
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
