--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,9 @@
 </div>
 
 
-
+<div class="marketing">
+<div class="container">
+<div class="row">
 
   <div class="marketing">
    <div class="footer">
